[project]
name = "python-osc"
version="1.9.0"
description="Open Sound Control server and client implementations in pure Python"
readme="README.rst"
requires-python=">=3.10"
license = {file = "LICENSE.txt"}
authors = [
  {name = "attwad", email = "tmusoft@gmail.com"},
]
keywords = ["osc", "sound", "midi", "music"]
classifiers=[
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'License :: Freely Distributable',
    'Programming Language :: Python :: 3',
    'Topic :: Multimedia :: Sound/Audio',
    'Topic :: System :: Networking',
]
[project.urls]
Repository = "https://github.com/attwad/python-osc"