[metadata]
license_files = LICENSE.txt

[mypy]
# Would be great to turn this on, however there's too many cases it would break
# right now.
# disallow_any_generics = True

disallow_subclassing_any = True

# Allow functions _without_ type annotations, but require that annotations be
# complete (possibly including the `Any` type) where they are present.
disallow_incomplete_defs = True
# check_untyped_defs = True
disallow_untyped_decorators = True


# # Would be great to turn these on eventually
# no_implicit_optional = True
# strict_optional = True

warn_redundant_casts = True
warn_unused_ignores = True
show_error_codes = True
# # Would be great to turn this on eventually
# # warn_return_any = True
# warn_unreachable = True

# implicit_reexport = False
# strict_equality = True

scripts_are_modules = True
warn_unused_configs = True

enable_error_code = ignore-without-code
